--- a/stackato.yml
+++ b/stackato.yml
@@ -11,4 +11,4 @@ min_version:
 services:
   ${name}-db: redis
 env:
-  RESERVATION_URL: http://scheduler.acmehealthco.com/
+  RESERVATION_URL: localhost
