--- a/stackato.yml
+++ b/stackato.yml
@@ -11,4 +11,5 @@ min_version:
 services:
   ${name}-db: redis
 env:
-  RESERVATION_URL: localhost
+# RESERVATION_URL: localhost2
+  RESERVATION_URL: http://scheduler.acmehealthco.com/
