--- a/stackato.yml
+++ b/stackato.yml
@@ -9,7 +9,7 @@ requirements:
 min_version:
   client: 1.4.3
 services:
-  ${name}-db: redis
+  cache-db: redis
 env:
-# RESERVATION_URL: localhost2
+# RESERVATION_URL: localhost
   RESERVATION_URL: http://scheduler.acmehealthco.com/
