--- a/stackato.yml
+++ b/stackato.yml
@@ -19,5 +19,5 @@ autoscale:
     min: 30
     max: 85
 env:
-#  RESERVATION_URL: localhost
-  RESERVATION_URL: http://scheduler.acmehealthco.com/
+  RESERVATION_URL: localhost
+#  RESERVATION_URL: http://scheduler.acmehealthco.com/
