--- a/stackato.yml
+++ b/stackato.yml
@@ -19,5 +19,5 @@ autoscale:
     min: 30
     max: 85
 env:
-  RESERVATION_URL: https://dev.hcpartnernet.com/
-#  RESERVATION_URL: https://scheduler.acmehealthco.com/
+#  RESERVATION_URL: https://dev.hcpartnernet.com/
+  RESERVATION_URL: https://helion.hpwsportal.com/
